# ironmind

./: .gitignore  .mise.toml  Cargo.toml  README.md  doppler.yaml  ironmind.toml
.github/workflows/: ci.yml
crates/ironmind-auth/: Cargo.toml
crates/ironmind-auth/src/: lib.rs
crates/ironmind-cli/: Cargo.toml
crates/ironmind-cli/src/: main.rs
crates/ironmind-core/: Cargo.toml
crates/ironmind-core/src/: agent.rs  config.rs  model.rs
crates/ironmind-mcp/: Cargo.toml
crates/ironmind-mcp/src/: client.rs  transport.rs
crates/ironmind-r2/: Cargo.toml
crates/ironmind-r2/src/: client.rs  lib.rs  model.rs  store.rs
crates/ironmind-web/: Cargo.toml
crates/ironmind-web/src/: api.rs  lib.rs  sse.rs
crates/ironmind-web/static/: index.html
worker/: doppler.yaml  package.json  wrangler.toml
worker/src/: auth.ts  index.ts  r2.ts  schema.ts
