[workspace]
members = [
    "crates/ironmind-core",
    "crates/ironmind-mcp",
    "crates/ironmind-cli",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["Gerard Webb <gerard.webb@ubuntusoftware.net>"]
repository  = "https://github.com/joeblug999/ironmind"
description = "Offline LLM inference engine bridging Qwen3 to MCP tool servers — built for factory/industrial use on Apple Silicon"

[workspace.dependencies]
# Inference
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

# Async
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"

# Serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Logging (matches plat-trunk observability pattern)
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["json"] }

# HTTP (for MCP JSON-RPC transport)
reqwest = { version = "0.12", features = ["json"] }
