[workspace]
members = [
    "crates/ironmind-core",
    "crates/ironmind-mcp",
    "crates/ironmind-r2",
    "crates/ironmind-auth",
    "crates/ironmind-web",
    "crates/ironmind-cli",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
authors      = ["Gerard Webb <gerard.webb@ubuntusoftware.net>"]
repository   = "https://github.com/joeblew999/ironmind"
description  = "Offline Qwen3 → MCP agent + chat GUI for factory/industrial use on Apple Silicon"

[workspace.dependencies]
tokio         = { version = "1", features = ["full"] }
tokio-stream  = "0.1"
futures       = "0.3"
anyhow        = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
reqwest     = { version = "0.12", features = ["json"] }
axum        = { version = "0.8", features = ["macros"] }
axum-extra  = "0.10"
tower-http  = { version = "0.6", features = ["cors", "fs"] }
async-trait = "0.1"
clap        = { version = "4", features = ["derive"] }
uuid        = { version = "1", features = ["v4"] }
