[package]
name        = "ironmind-core"
description = "Core inference + agent loop for ironmind"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
mistralrs           = { workspace = true }
tokio               = { workspace = true }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
toml                = "0.8"

[features]
default = ["metal"]
metal   = ["mistralrs/metal"]
cuda    = ["mistralrs/cuda"]
cpu     = []
