[package]
name        = "ironmind-core"
description = "Core inference + agent loop for ironmind"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
# "inference" enables mistral.rs — requires Apple Silicon (Metal) or CUDA
# Do NOT enable on Linux CI
default   = []
inference = ["dep:mistralrs"]
metal     = ["inference", "mistralrs/metal"]
cuda      = ["inference", "mistralrs/cuda"]

[dependencies]
mistralrs          = { git = "https://github.com/EricLBuehler/mistral.rs.git", optional = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
toml               = { workspace = true }
