[package]
name        = "ironmind-mcp"
description = "MCP client for ironmind — dispatches tool calls to any MCP server"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
ironmind-core   = { path = "../ironmind-core" }
tokio           = { workspace = true }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
reqwest         = { workspace = true }
async-trait     = "0.1"
