[package]
name        = "ironmind-r2"
description = "R2 storage client for ironmind — BLAKE3 content-addressed, S3-compatible"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
blake3      = "1"
uuid        = { workspace = true }
chrono      = { version = "0.4", features = ["serde"] }
aws-sdk-s3           = "1"
aws-config           = "1"
aws-credential-types = "1"
